Mic and cam alignment correction

--- a/css/modules/dashboard.css
+++ b/css/modules/dashboard.css
@@ -5,7 +5,6 @@
 }
 
 #virtualclassCont #dashboardContainer .modal .modal-content {
-  overflow-y: hidden;
   padding: 0;
 }
 
